Edu section added in user profile, More items scrapped for  int container, BoxModal for click event refined

--- a/public/css/internshipsPage/modalbox.css
+++ b/public/css/internshipsPage/modalbox.css
@@ -1,6 +1,6 @@
  /* CSS Modal Box for each internships,scholarships,jobs etc */
 
- .modalbox{
+ .modal{
     display: none; /* Hidden by default */
     position: fixed; /* Stays in place */
     z-index: 1; /* Sits on the top */
