--- a/templates/views/help/reportproblem.hbs
+++ b/templates/views/help/reportproblem.hbs
@@ -1,18 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     {{>headerMeta}}
     <title>Report a Problem : CareerPilot </title>
 </head>
+
 <body>
 
     {{>header}}
 
-    <center> <h1> Report a Problem </h1></center>
+    <center>
+        <h1> Report a Problem </h1>
+    </center>
 
     <div class="form-control">
+        <p class="section-para index-para"> The "Report a Problem" page provides you with the opportunity to share any issues, concerns, or feedback you
+            may have encountered while using our platform. Your feedback is incredibly valuable as it helps us improve
+            and provide you with a better experience. Whether you've come across a technical glitch, a confusing
+            feature, or have suggestions for enhancements, this page is designed to ensure that your voice is heard.
+            Your input enables us to address any challenges you're facing and refine our services, ensuring that you
+            have a smoother and more enjoyable experience moving forward. Thank you for taking the time to help us
+            enhance our platform for you and others.</p>
 
+            <button class="btn" onclick="sendmail()"> Email Us </button>
     </div>
-    
+
 </body>
+
 </html>
