--- a/templates/views/settings.hbs
+++ b/templates/views/settings.hbs
@@ -23,7 +23,7 @@
     <button class="sidebar-btn"> Account Settings </button>
     <li><a href="/myprofile">View Profile</a></li>
     <li><a href="/namechange">Update Name</a></li>
-    <li><a href="#">Update Email Address</a></li>
+    <li><a href="/updateEmail">Update Email Address</a></li>
     <li><a href="/forgotPassword">Update Password</a></li>
     <li><a href="#">Update Interests</a></li>
     <li><a href="#">Update Gender :/ </a></li>
