--- a/templates/views/loginPage.hbs
+++ b/templates/views/loginPage.hbs
@@ -1,42 +1,46 @@
 {{>headerMeta}}
 {{>header}}
 
-<main class="container">
+<script src="https://www.google.com/recaptcha/api.js"></script>
+<script>
+    function onSubmit(token) {
+        document.getElementById("g-recaptcha").submit();
+    }
+</script>
 
-    {{!-- Incase User logs out from all devices and gets redirected to login --}}
-    {{logoutMessage}}
+<body>
 
-    <h1> Login </h1>
+    <main class="container">
 
-    {{message}}
+        {{!-- Incase User logs out from all devices and gets redirected to login --}}
+        {{logoutMessage}}
 
-    <p id="isLoginError"> {{loginErrorIfAny}} </p>
-    {{errorMsg}}
-    {{!-- {{loginErrorIfAny}} --}}
+        <h1> Login </h1>
 
-    <form action="/login" method="POST">
+        {{message}}
 
-        <div class="form-container">
+        <p id="isLoginError"> {{loginErrorIfAny}} </p>
+        {{errorMsg}}
+        {{!-- {{loginErrorIfAny}} --}}
 
-            <label> Email Id </label><br>
-            <input type="text" placeholder="Enter your email Id" id="email" name="email"><br>
+        <form action="/login" method="POST">
 
-            <label> Password </label><br>
-            <input type="password" placeholder="Enter your password" id="password" name="password"><br><br>
-            <label for="rememberme"> Remember Me <input type="checkbox" value="remember-me"></label><br>
-            <a href="/forgotpassword"> Forgot Password? Click Here!</a>
+            <div class="form-container">
 
-            <button class="btn g-recaptcha"  id="login" type="submit">  Login </button><br>
+                <label> Email Id </label><br>
+                <input type="text" placeholder="Enter your email Id" id="email" name="email"><br>
 
-        </div>
+                <label> Password </label><br>
+                <input type="password" placeholder="Enter your password" id="password" name="password"><br><br>
+                <label for="rememberme"> Remember Me <input type="checkbox" value="remember-me"></label><br>
+                <a href="/forgotpassword"> Forgot Password? Click Here!</a>
 
-    </form>
+                <button class="btn g-recaptcha" id="login" type="submit"> Login </button><br>
 
+            </div>
 
-
-
-
-
-</main>
+        </form>
 
 
+    </main>
+</body>
