Dashboard Optimized. Auth Verified Header failed

--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -13,12 +13,36 @@
 
         <h1 class="section-titles"> About Us </h1>
 
+
     </div>
-        <p class="index-para"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat, nostrum ipsam rem iure
-            perspiciatis eligendi, commodi tempora pariatur enim ipsa, illo incidunt animi consequuntur expedita minima
-            ut earum facilis. Officiis non cumque itaque soluta aperiam pariatur tempore vitae numquam, laborum,
-            voluptates repudiandae ea corrupti voluptatem nesciunt nemo id. Sed voluptatibus quia ex architecto
-            consequuntur, saepe accusantium tenetur dolore rem maxime!</p>
+    <h1 class="section-subtitles"> About CareerPilot </h1>
+    <p class="index-para"> Welcome to CarrerPilot, a cutting-edge web portal powered by Node.js that revolutionizes how
+        students and graduates navigate their educational and professional journeys. In an era of digital
+        transformation, CarrerPilot is your go-to platform for seamless access to a plethora of educational resources,
+        job opportunities, certifications, and more.</p>
+
+    <h1 class="section-subtitles"> Empowering Your Path </h1>
+
+    <p class="index-para"> At CarrerPilot, we understand that each individual's educational journey is unique. Our
+        platform empowers you to take the reins of your career trajectory by providing personalized educational insights
+        and opportunities tailored to your preferences and skills. Whether you're seeking scholarships to further your
+        education, staying updated with the latest job alerts, or exploring certifications to enhance your expertise,
+        CarrerPilot brings all these elements under one digital roof.</p>
+
+    <h1 class="section-subtitles"> Integrated Web Scraping and APIs </h1>
+
+    <p class="index-para"> Our commitment to excellence is embodied through the integration of sophisticated web
+        scraping techniques and the utilization of APIs. Through these advanced technologies, CarrerPilot curates
+        relevant and up-to-date information from across the web, ensuring that you receive accurate and timely updates
+        about scholarships, job openings, and other educational resources. Say goodbye to scouring multiple websites –
+        CarrerPilot streamlines the process for you.</p>
+
+    <h1 class="section-subtitles"> Join Us on the Journey</h1>
+
+    <p class="index-para"> While CarrerPilot is still in construction, we're excited to offer a glimpse into the
+        potential it holds. Our dedicated team is tirelessly working to create a comprehensive, user-friendly, and
+        powerful platform that will be the cornerstone of your educational and professional journey. Join us on this
+        exciting adventure as we build a bridge between your aspirations and the resources you need to achieve them.</p>
 
 </body>
 
