--- a/templates/views/help/reportproblem.hbs
+++ b/templates/views/help/reportproblem.hbs
@@ -26,6 +26,16 @@
             <button class="btn" onclick="sendmail()"> Email Us </button>
     </div>
 
+    <script>
+
+        function sendmail(){
+
+            const emailAddress = `server.careerpilot@gmail.com`;
+            const mail = `mailto:${emailAddress}`;
+            window.open(mail);
+        }
+    </script>
+
 </body>
 
 </html>
