--- a/templates/views/settings.hbs
+++ b/templates/views/settings.hbs
@@ -18,24 +18,21 @@
   </div>
   <div class="sidebar">
 
-  <div class="dropdown-content">
+  <div class="dropdown-content" style="text-align: center">
 
     <button class="sidebar-btn"> Account Settings </button>
-    <li><a href="/myprofile">View Profile</a></li>
-    <li><a href="/namechange">Update Name</a></li>
-    <li><a href="/updateEmail">Update Email Address</a></li>
-    <li><a href="/forgotPassword">Update Password</a></li>
-    <li><a href="#">Update Interests</a></li>
-    <li><a href="#">Update Gender :/ </a></li>
-    <li><a href="#coursesContainerDashboard">Courses</a></li>
-    <li><a href="#">Certifications</a></li>
-      <button class="sidebar-btn"> Notification Settings </button>
+    <a href="/myprofile">View Profile</a><br>
+    <a href="/namechange">Update Name</a><br>
+    <a href="/updateEmail">Update Email Address</a><br>
+    <a href="/forgotPassword">Update Password</a><br>
+    <a href="#">Update Interests</a><br>
+    <a href="#">Update Gender :/ </a><br>
+    <a href="#coursesContainerDashboard">Courses</a><br>
+    <a href="#">Certifications</a><br>
+      <button class="sidebar-btn" style="text-align: center"> Notification Settings </button>
   </div>
   <ul>
-   
-
-    <li> </li> <a href="/myprofile"> Show/Disable notifications </li>
-
+    <a href="/myprofile"> Show/Disable notifications </li>
     <button class="btn" id="notificationButton">Show Notification</button>
 
   </ul>
