Dashboard Optimized. Auth Verified Header failed

--- a/templates/views/dashboard.hbs
+++ b/templates/views/dashboard.hbs
@@ -72,15 +72,6 @@
                 </div>
             
                 <div class="dropdown">
-                    <button class="sidebar-btn"> Help </button>
-                </div>
-                <div class="dropdown-content" style="text-align: center">
-                    <a href="#">Language</a><br>
-                    <a href="/reportproblem">Report A Problem</a><br>
-                    <a href="/feedbackPage">Feedback</a><br>
-                    <a href="/contactus">Contact Us</a><br>
-                </div>
-                <div class="dropdown">
                     <button class="sidebar-btn"> Account Settings </button>
                 </div>
                 <div class="dropdown-content" style="text-align: center">
@@ -90,6 +81,32 @@
                     <a href="#">Notification Settings</a><br>
                     <a href="/logout">Logout </a><br>
                     <a href="/logoutAll">Logout From all devices</a>
+                </div>
+
+                <div class="dropdown">
+                    <button class="sidebar-btn"> Notification Settings </button>
+                </div>
+                <div class="dropdown-content" style="text-align: center">
+                    <a href="/myprofile">Allow / Reject Notifications </a><br>
+                    
+                </div>
+
+                <div class="dropdown">
+                    <button class="sidebar-btn"> Help </button>
+                </div>
+                <div class="dropdown-content" style="text-align: center">
+                    <a href="#">Language</a><br>
+                    <a href="/reportproblem">Report A Problem</a><br>
+                    <a href="/feedbackPage">Feedback</a><br>
+                    <a href="/contactus">Contact Us</a><br>
+                </div>
+                <div class="dropdown">
+                    <button class="sidebar-btn"> Accessibility </button>
+                </div>
+                <div class="dropdown-content" style="text-align: center">
+                    <a href="#"> Toggle Dark/Light Mode </a><br>
+                    <a href="/myprofile"> Personal Details </a><br>
+                    
                 </div>
             </ul>
         </nav>
