--- a/templates/views/contactus.hbs
+++ b/templates/views/contactus.hbs
@@ -16,10 +16,10 @@
     <form class="form-control" action="/contactus" method="POST">
 
     
-        <input type="text" name="username" id="name" placeholder="Name*" required><br>
-        <input type="email" name="email" id="email" placeholder="Email Address*" required><br>
-        <input type="text" name="subject" id="subject" placeholder="Subject*" required><br>
-        <textarea rows="13" cols="13" name="message" id="message"></textarea><br>
+        <input type="text" name="username" id="name" placeholder="Name*" required><br><br>
+        <input type="email" name="email" id="email" placeholder="Email Address*" required><br><br>
+        <input type="text" name="subject" id="subject" placeholder="Subject*" required><br><br>
+        <textarea rows="13" cols="53" name="message" id="message"></textarea><br><br>
         <button class="btn" type="submit"> Send </button>
         <button class="btn"> Clear </button>
 
