Account settings refined, New Index UI HTML structured, CSS in dev

--- a/templates/views/index2.hbs
+++ b/templates/views/index2.hbs
@@ -1,11 +1,41 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     {{>headerMeta2}}
 
     <title>Home : CareerPilot </title>
 </head>
+
 <body>
-    {{>header2}}    
+    {{>header2}}
+
+    <div class="bg-img">
+        <p class="cover-title"> Soaring Careers : </p>
+        <p class="cover-title"> Elevating Dreams, Connecting opportunities </p>
+        <p class="cover-para"> Our primary goal is to empower and support learners of all backgrounds in acquiring the
+            knowledge and skills they need to excel in their chosen fields </p>
+
+            <button class="btn-white"> <a href="/about"> Know More </a></button>
+            <button class="btn-transp"> <a href="/careeradvice"> Career Advice </a></button>
+    </div>
+
+    <div class="slideshow">
+
+    </div>
+
+    <section class="section">
+
+        <h1> About Us </h1> 
+        <p class="para">
+
+        </p>
+
+        <strong> Thank you for choosing us as your trusted resource! </strong>
+
+        <button class="btn"> <a href="#"> Know More </a></button>
+    </section>
+
 </body>
+
 </html>
