--- a/public/css/index2.css
+++ b/public/css/index2.css
@@ -6,6 +6,25 @@
     padding: 0px;
 }
 
+/* Utility */
+
+.btn-white{
+
+    color:black;
+    padding: 10px;
+    border-radius: 12px;
+    background-color: white;
+    border: 0px transparent;
+}
+
+.btn-transp{
+    color: black;
+    border: 1px solid black;
+    background-color: transparent;
+    border-radius: 12px;
+    padding: 10px;
+}
+
 /* Header */
 
 .header{
