--- a/templates/views/index2.hbs
+++ b/templates/views/index2.hbs
@@ -10,31 +10,97 @@
 <body>
     {{>header2}}
 
-    <div class="bg-img">
-        <p class="cover-title"> Soaring Careers : </p>
-        <p class="cover-title"> Elevating Dreams, Connecting opportunities </p>
-        <p class="cover-para"> Our primary goal is to empower and support learners of all backgrounds in acquiring the
-            knowledge and skills they need to excel in their chosen fields </p>
+    <main>
 
-            <button class="btn-white"> <a href="/about"> Know More </a></button>
-            <button class="btn-transp"> <a href="/careeradvice"> Career Advice </a></button>
-    </div>
+        <div class="hero">
+            <h2 class="cover-title"> Soaring Careers : </h2>
+            <h2 class="cover-title"> Elevating Dreams, Connecting opportunities </h2>
+            <p class="cover-para"> Our primary goal is to empower and support learners of all backgrounds in acquiring
+                the
+                knowledge and skills they need to excel in their chosen fields </p>
 
-    <div class="slideshow">
+            <div class="btn-box">
 
-    </div>
+                <button class="btn-white"> <a href="/about"> Know More </a></button>
+                <button class="btn-transp"> <a href="/careeradvice"> Career Advice </a></button>
+            </div>
 
-    <section class="section">
+        </div>
 
-        <h1> About Us </h1> 
-        <p class="para">
+        <div class="slideshow">
 
-        </p>
+            <div class="sliders" id="slider-1">
+                <h1> Certifications </h1>
 
-        <strong> Thank you for choosing us as your trusted resource! </strong>
+                <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum magnam quod labore sit amet fugit
+                    cupiditate libero officia dicta. Aperiam, similique voluptates nisi molestiae iste quaerat quo
+                    veritatis animi reiciendis! </p>
+                
+                <button class="btn-white"> Find Certifications </button>
+            </div>
 
-        <button class="btn"> <a href="#"> Know More </a></button>
-    </section>
+             <div class="sliders" id="slider-1">
+                <h1> Internships </h1>
+
+                <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum magnam quod labore sit amet fugit
+                    cupiditate libero officia dicta. Aperiam, similique voluptates nisi molestiae iste quaerat quo
+                    veritatis animi reiciendis! </p>
+                
+                <button class="btn-white"> Find Certifications </button>
+            </div>
+
+             <div class="sliders" id="slider-1">
+                <h1> Jobs </h1>
+
+                <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum magnam quod labore sit amet fugit
+                    cupiditate libero officia dicta. Aperiam, similique voluptates nisi molestiae iste quaerat quo
+                    veritatis animi reiciendis! </p>
+                
+                <button class="btn-white"> Find Certifications </button>
+            </div>
+
+             <div class="sliders" id="slider-1">
+                <h1> Sholarships </h1>
+
+                <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum magnam quod labore sit amet fugit
+                    cupiditate libero officia dicta. Aperiam, similique voluptates nisi molestiae iste quaerat quo
+                    veritatis animi reiciendis! </p>
+                
+                <button class="btn-white"> Find Certifications </button>
+            </div>
+
+
+
+        </div>
+
+        <section class="section">
+
+            <h1> About Us </h1>
+            <p class="para">
+
+            </p>
+
+            <strong> Thank you for choosing us as your trusted resource! </strong>
+
+            <button class="btn"> <a href="#"> Know More </a></button>
+        </section>
+
+        <section class="section">
+            <div class="newsletters">
+                <h2> Subscribe to Newsletters and get company news </h2>
+                <input type="text" placeholder="Your email">
+                <button class="btn-nsl"> Subscribe </button>
+            </div>
+        </section>
+
+    </main>
+
+    <footer>
+        <div class="ft-1">
+            <p> CareerPilot </p>
+            <p> Integrated Placements and Scholarship Portal for students and graduates</p>
+        </div>
+    </footer>
 
 </body>
 
