--- a/templates/views/partials/header2.hbs
+++ b/templates/views/partials/header2.hbs
@@ -1,7 +1,7 @@
 <header class="header">
 
     <div class="header-left">
-        <img src="/public/img/icons/logo_symbol.png">
+        <img src="img/logos/logo-blue.png">
         <p id="site-title"> Career Pilot</p>
     </div>
 
