Forgot password functionality using sec question added, New index UI Refined

--- a/templates/views/index2.hbs
+++ b/templates/views/index2.hbs
@@ -46,27 +46,27 @@
                     cupiditate libero officia dicta. Aperiam, similique voluptates nisi molestiae iste quaerat quo
                     veritatis animi reiciendis! </p>
                 
-                <button class="btn-white"> Find Certifications </button>
+                <button class="btn-white"> Find Internships </button>
             </div>
 
-             <div class="sliders" id="slider-1">
+             <div class="sliders" id="slider-2">
                 <h1> Jobs </h1>
 
                 <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum magnam quod labore sit amet fugit
                     cupiditate libero officia dicta. Aperiam, similique voluptates nisi molestiae iste quaerat quo
                     veritatis animi reiciendis! </p>
                 
-                <button class="btn-white"> Find Certifications </button>
+                <button class="btn-white"> Find Jobs </button>
             </div>
 
-             <div class="sliders" id="slider-1">
-                <h1> Sholarships </h1>
+             <div class="sliders" id="slider-3">
+                <h1> Scholarships </h1>
 
                 <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum magnam quod labore sit amet fugit
                     cupiditate libero officia dicta. Aperiam, similique voluptates nisi molestiae iste quaerat quo
                     veritatis animi reiciendis! </p>
                 
-                <button class="btn-white"> Find Certifications </button>
+                <button class="btn-white"> Find Scholarships </button>
             </div>
 
 
@@ -78,6 +78,11 @@
             <h1> About Us </h1>
             <p class="para">
 
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum magnam quod labore sit amet fugit
+                    cupiditate libero officia dicta. Aperiam, similique voluptates nisi molestiae iste quaerat quo
+                    veritatis animi reiciendis!Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum magnam quod labore sit amet fugit
+                    cupiditate libero officia dicta. Aperiam, similique voluptates nisi molestiae iste quaerat quo
+                    veritatis animi reiciendis!
             </p>
 
             <strong> Thank you for choosing us as your trusted resource! </strong>
@@ -87,20 +92,23 @@
 
         <section class="section">
             <div class="newsletters">
-                <h2> Subscribe to Newsletters and get company news </h2>
+                <h2 class="cover-title"> Subscribe to Newsletters <br> &amp; Get Company News </h2>
+
+                <div id="subscribe">
                 <input type="text" placeholder="Your email">
-                <button class="btn-nsl"> Subscribe </button>
+                <button class="btn-white"> Subscribe </button>
+
+              
+
+                </div>
+
+                </div>
             </div>
         </section>
 
     </main>
 
-    <footer>
-        <div class="ft-1">
-            <p> CareerPilot </p>
-            <p> Integrated Placements and Scholarship Portal for students and graduates</p>
-        </div>
-    </footer>
+    {{>footer2}}
 
 </body>
 
