--- a/public/css/index2.css
+++ b/public/css/index2.css
@@ -2,8 +2,16 @@
 
 *{
     box-sizing: border-box;
+    font-family: Verdana, sans-serif;
+    font-size: 15px;
+    line-height: 1.5;
     margin:0px;
     padding: 0px;
+}
+
+html,body{
+    font-size: 15px;
+    line-height: 1.5
 }
 
 /* Utility */
@@ -16,6 +24,7 @@
     background-color: white;
     border: 0px transparent;
     font-family: Arial, Helvetica, sans-serif;
+    margin: 2px;
 }
 
 .btn-transp{
@@ -24,6 +33,25 @@
     background-color: transparent;
     border-radius: 12px;
     padding: 10px;
+    margin: 2px;
+}
+
+.btn-transp a{
+    color: white;
+ 
+}
+
+.btn{
+    background-color: var(--clr-primary);
+    border-radius: 12px;
+    color: white;
+    border: 0px transparent;
+    padding: 10px;
+    margin: 2px;
+}
+
+.btn a{
+    color: white;
 }
 
 button a{
@@ -45,9 +73,45 @@ button a{
 
 /* Typography */
 
-h2,h3{
+h2,h3,h4{
     font-family: var(--ff-title);
 }
+
+h1 {
+    font-size: 36px
+}
+
+h2 {
+    font-size: 30px
+}
+
+h3 {
+    font-size: 24px
+}
+
+h4 {
+    font-size: 20px
+}
+
+h5 {
+    font-size: 18px
+}
+
+h6 {
+    font-size: 16px
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+    font-family: "Segoe UI", Arial, sans-serif;
+    font-weight: 400;
+    margin: 10px 0
+}
+
 
 
 
@@ -62,6 +126,7 @@ h2,h3{
     justify-content:space-around;
     font-weight: 100;
     padding:0.5rem;
+    /* margin: 2px; */
 
 }
 
@@ -96,9 +161,10 @@ h2,h3{
     list-style-type: none;
 }
 
-.navbar-links li a{
+header a{
     text-decoration: none;
     padding: 1.2rem;
+    color: black;
 }
 
 .navbar-links li a:focus{
@@ -143,4 +209,69 @@ header a:hover{
     font-weight: 600;
 }
 
+/* General Section */
+
+.section{
+    padding: 1rem 1.5rem;
+    line-height: 2;
+}
+
+.section h1{
+    padding: 1.5rem 0rem;
+}
+
+/* Newsletters */
+
+.newsletters{
+    background-color: var(--clr-primary);
+    background-image: url(/img/newsletters.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-blend-mode: multiply;
+    border-radius: 20px;
+    padding: 1.5rem 1.5rem;
+    margin: 0rem 3.5rem;
+    
+}
+
+.newsletters h2{
+    color: white;
+    text-align: center;
+    padding: 0rem 1.5rem;
+}
+
+.newsletters input{
+    background-color: white;
+    border-radius: 12px;
+    border: 0px transparent;
+    color: black;
+    margin: 8px;
+    padding: 0.5rem;
+}
+
+.newsletters input:focus{
+    border: 0px transparent;
+   
+}
+
+#subscribe{
+    margin-left: auto;
+    margin-right: auto;
+    display: flex;
+    justify-content: center;
+}
+
+/* Footer */
+
+footer{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    align-items: center;
+
+}
+footer h4{
+    color: var(--clr-primary);
+
+}
 
